package cl.ucn.disc.dsm.pictwin.frontend.model;

/**
 * @author Benjamin Millas
 * class state
 */
public enum State {
    ACTIVE,
    BANNED,
}
